src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
  namespace: ${APPLICATION_NAMESPACE}
spec:
  ports:
    - port: ${APPLICATION_IMAGE_EXPOSE_PORT}
      targetPort: ${APPLICATION_IMAGE_EXPOSE_PORT}
      name: ${APPLICATION_NAME}
  selector:
    app: ${APPLICATION_NAME}
    env: ${APPLICATION_ENVIRONMENT}
  type: ClusterIP
